--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,5 +34,5 @@
     "typescript-eslint": "^8.35.1",
     "vite": "^7.0.4"
   },
-  "homepage": "https://kakerusaman.github.io/costratio/"
+  "homepage": "https://kakerusaman.github.io/costratio/frontend"
 }
